other edge cases